--- a/leaflet-projections/index.html
+++ b/leaflet-projections/index.html
@@ -63,53 +63,32 @@ var crsETRS89 = new L.Proj.CRS.TMS('EPSG:25830',
 );
 
 
+var pnoaETRS89 = new L.Proj.CRS('EPSG:25830',
+	'+proj=utm +zone=30 +ellps=GRS80 +units=m +no_defs',
+	{
+		resolutions: [
+			610.35123300645204835746,305.17561650322744526420,152.58780825161315419791,76.29390412580644920126,38.14695206290335960375,19.07347603145165138017,9.53673801572581147923,3.96874785750115641747,2.64583190500077103380,1.98437392875057820874,1.32291595250038551690,0.66145797625019273625,0.26458319050007705897,0.13229159525003852949
+		],
+		origin: [0, 0],
+		bounds:  L.bounds([-1079526.5850090983,2500875.6941688014],[1228424.5314746893,5056867.6606168505])
+	});
+
+var topoETRS89 = new L.Proj.CRS('EPSG:25830',
+	'+proj=utm +zone=30 +ellps=GRS80 +units=m +no_defs',
+	{
+		resolutions: [
+			610.35123300645204835746,305.17561650322744526420,152.58780825161315419791,76.29390412580644920126,38.14695206290335960375,19.07347603145165138017,9.53673801572581147923,3.96874785750115641747,2.64583190500077103380,1.98437392875057820874,1.32291595250038551690,0.66145797625019273625,0.26458319050007705897,0.13229159525003852949
+		],
+		origin: [0, 0],
+		bounds:  L.bounds([207256.000000,4140229.000000],[1209991.000000,4565432.000000])
+	});
 
 
 
 
 
-var pnoaETRS89 = new L.Proj.CRS.TMS('EPSG:25830',
-   '+proj=utm +zone=30 +ellps=GRS80 +units=m +no_defs',    
-   [-1079526.5850090983,2500875.6941688014,1228424.5314746893,5056867.6606168505], 
-    {
-        origin: [0, 0],
-        resolutions: [78271.51698,
-			39135.75849,
-			19567.87929,
-			9783.9396225,
-			4891.96981125,
-			2445.984905625,
-			1222.9924528125,
-			611.4962264063,
-			305.7481132031,
-			152.8740566016,
-			76.4370283008,
-			38.2185141504,
-			19.1092570752,
-			9.5546285376,
-			4.7773142688,
-			2.3886571344,
-			1.1943285672,
-			0.5971642836,
-			0.2985821418,
-			0.1492910709,
-              ],
-    }
-);
 
-L.CRS.EPSG25830 = new L.Proj.CRS.TMS('EPSG:25830',
-		   '+proj=utm +zone=30 +ellps=GRS80 +units=m +no_defs',
-		    [207256.000000,4140229.000000,1209991.000000,4565432.000000], 
-		    {
-		        origin: [0, 0],
-		        resolutions: [
-		              610.35123300645204835746,305.17561650322744526420,152.58780825161315419791,76.29390412580644920126,38.14695206290335960375,19.07347603145165138017,9.53673801572581147923,3.96874785750115641747,2.64583190500077103380,1.98437392875057820874,1.32291595250038551690,0.66145797625019273625,0.26458319050007705897,0.13229159525003852949
-		              ],
-		    }
-		);
-
-
-
+/*
   var proj25830 = L.CRS["EPSG25830"];
   var pos1 = new L.LatLng(21.899, -18.162);
   var pos12= new L.LatLng(45.286, 6.289 );
@@ -118,7 +97,7 @@ L.CRS.EPSG25830 = new L.Proj.CRS.TMS('EPSG:25830',
   
   console.log("coord1 %O", project1);
   console.log("coord2 %O", project2);
-
+*/
 
 
 
@@ -130,7 +109,7 @@ L.CRS.EPSG25830 = new L.Proj.CRS.TMS('EPSG:25830',
 	});
 
 	var CRS_3857 = L.CRS.EPSG3857;
-	var CRS_25830 = pnoaETRS89;
+	var CRS_25830 = crsETRS89;
 	
 	console.log("New 4326 %O",CRS_4326);
 	console.log("Old 4326 %O",L.CRS.EPSG4326);
@@ -150,7 +129,7 @@ L.CRS.EPSG25830 = new L.Proj.CRS.TMS('EPSG:25830',
 
 	var map25830 = L.map('map_25830', {
 	  crs: CRS_25830,
-	  continuousWorld: true,
+	  continuousWorld: false,
 	  worldCopyJump: false
 	}).setView([39.425, -0.37], 8);
 
@@ -158,13 +137,22 @@ L.CRS.EPSG25830 = new L.Proj.CRS.TMS('EPSG:25830',
 
 	//Build matrix with zoom and topLeftCorner 4 4326CRS
 	var matrix4326 = getMatrix("EPSG:4326:", new L.LatLng(90 ,-180),19);
-	var matrix25830 = getMatrix25380();
+	//var matrix25830 = getMatrix25380();
+	var matrix25830  = getTopograficoMatrix();
 	var matrix3857 = getMatrix("", new L.LatLng(20037508.3428,-20037508.3428),22);
 
 	var layer3857 = createWMTSlayer(url, "OI.OrthoimageCoverage", "GoogleMapsCompatible", matrix3857);
 	var layer4326 = createWMTSlayer(url, "OI.OrthoimageCoverage", "EPSG:4326", matrix4326,256);	
 	//var layer25830 = createWMTSlayer(urltopo, "topografico", "ETRS89CV", matrix25830);
-	var layer25830 = createWMTSlayer(url, "OI.OrthoimageCoverage", "EPSG:25830", matrix25830);
+	//var layer25830 = createWMTSlayer(url, "OI.OrthoimageCoverage", "EPSG:25830", matrix25830);
+
+
+
+	var layer25830  = new L.TileLayer('http://terramapas.icv.gva.es/topografico/wmts?service=WMTS&request=GetTile&version=1.0.0&layer=topografico&style=default&tilematrixset=ETRS89CV&TileMatrix={z}&TileRow={y}&TileCol={x}', {
+		continuousWorld: true,
+		attribution: '&copy; <a href="http://www.disid.com/">DISID</a> Topografico, WMTS',
+	});
+
 
 	console.log("3857 %O", matrix3857);
 	console.log("25830 %O", matrix25830);
@@ -235,7 +223,8 @@ L.CRS.EPSG25830 = new L.Proj.CRS.TMS('EPSG:25830',
         matrix[10] = {identifier:10, topLeftCorner : new L.LatLng(  4565594.103703, 207256  )};
         matrix[11] = {identifier:11, topLeftCorner : new L.LatLng(  4565594.103703, 207256  )};
         matrix[12] = {identifier:12, topLeftCorner : new L.LatLng(  4565458.637110, 207256  )};
-        matrix[13] = {identifier:13, topLeftCorner : new L.LatLng(  4565458.637110, 207256  )};  return matrix;      
+        matrix[13] = {identifier:13, topLeftCorner : new L.LatLng(  4565458.637110, 207256  )};  
+        return matrix;      
     }
 
     function createWMTSlayer(url, layer, tilematrixSet, matrix, tileSize){
