--- a/nba/nba.html
+++ b/nba/nba.html
@@ -14,43 +14,15 @@
 </head>
 <body>
 
-<div id='map' style="width: 600px; height: 600px"></div>
+<div id='map' style="width: 100; height: 500px"></div>
+<div id='logs'>	
+</div>
 
 <script type="text/javascript">    
 /*
 //Curry stat options
 var statOptions ={
-    AheadBehind:null,
-    ClutchTime:null,
-    ContextFilter:"SEASON_YEAR='2015-16'",
-    ContextMeasure:"FGA",
-    DateFrom:null,
-    DateTo:null,
-    EndPeriod:null,
-    EndRange:null,
-    GameID:null,
-    GameSegment:null,
-    LastNGames:0,
-    LeagueID:"00",
-    Location:null,
-    Month:0,
-    OpponentTeamID:0,
-    Outcome:null,
-    Period:0,
-    PlayerID:201939,
-    PointDiff:null,
-    Position:null,
-    RangeType:null,
-    RookieYear:null,
-    Season:"2015-16",
-    SeasonSegment:null,
-    SeasonType:"Regular Season",
-    StartPeriod:null,
-    StartRange:null,
-    TeamID:0,
-    VsConference:null,
-    VsDivision:null
-};
+    AheadBehind:null,    ClutchTime:null,    ContextFilter:"SEASON_YEAR='2015-16'",    ContextMeasure:"FGA",    DateFrom:null,    DateTo:null,    EndPeriod:null,    EndRange:null,    GameID:null,    GameSegment:null,    LastNGames:0,    LeagueID:"00",    Location:null,    Month:0,    OpponentTeamID:0,    Outcome:null,    Period:0,    PlayerID:201939,    PointDiff:null,    Position:null,    RangeType:null,    RookieYear:null,    Season:"2015-16",    SeasonSegment:null,    SeasonType:"Regular Season",    StartPeriod:null,    StartRange:null,    TeamID:0,    VsConference:null,    VsDivision:null};
 var settings = {
   "async": true,
   "crossDomain": true,
@@ -99,8 +71,8 @@ var mapOptions={
         "SHOT_ZONE_AREA":true,
         "SHOT_ZONE_RANGE":true,
         "SHOT_DISTANCE":true,
-        "LOC_X":false,
-        "LOC_Y":false,
+        "LOC_X":true,
+        "LOC_Y":true,
         "SHOT_ATTEMPTED_FLAG":false,
         "SHOT_MADE_FLAG":false
     }
@@ -111,7 +83,8 @@ var map = L.map('map', {
     zoom: 1
 });
 map.on("click", function (e){
-    console.log(e);
+	//console.log(e):
+	jQuery("#logs").text(e.latlng);
 })
 var layer = L.featureGroup();
 mapOptions.layers.shots = layer;
@@ -122,6 +95,7 @@ jQuery( document ).ready(function() {
     manageNBAresponse(curry);
     drawCourt();
 });
+
 function manageNBAresponse(response){
     var jsonP = jQuery.parseJSON(response);
     mapOptions.shots.options = jsonP;
@@ -147,6 +121,7 @@ function manageNBAresponse(response){
             locateShotOnMap(value);          
         });   
 }
+
 function locateShotOnMap(shot){
     var xy = L.latLng(shot[mapOptions.shots.location.y], shot[mapOptions.shots.location.x]);
     var shotLocation = L.circleMarker(xy, style(shot));
@@ -199,6 +174,7 @@ function locateShotOnMap(shot){
         }
     }
 }
+
 function drawCourt(){
     var courtLayer = L.featureGroup();
     var courtStyle = {
@@ -217,15 +193,36 @@ function drawCourt(){
             fillOpacity: 1
     };
     //basketball hoop
-    var hoop = L.circle([0,0], 7.5, courtStyle).addTo(map);
+    var hoop = L.circle([0,0], 6.25, courtStyle).addTo(map);
     courtLayer.addLayer(hoop);
+
+    var tripleLine = L.circle([0,0], 237.5, courtStyle).addTo(map);
+    var clipArea = L.rectangle([[100,-300],[280,300]]).addTo(map);
+
+    courtLayer.addLayer(tripleLine);
+
+    var latlngs = [];
+    latlngs.push( L.latLng(-1.6, -216));
+    latlngs.push( L.latLng(0, 216));
+    var polyline = L.polyline(latlngs,courtStyle).addTo(map);
+
+    var latlngs = [];
+    latlngs.push( L.latLng(0, 0));
+    latlngs.push( L.latLng(23, 0));
+    var polyline = L.polyline(latlngs,courtStyle).addTo(map);
+
+
+
     //Create backboard
-    var bounds = [[-30, 7.5], [ 30, 67.5]];
+    var bounds = [[0,-300], [564,300]];
     var backboard = L.rectangle(bounds, courtStyle);
     courtLayer.addLayer(backboard);
+
+
     //Add to map
     courtLayer.bringToFront();
     mapOptions.layers.court = courtLayer;
     mapOptions.map.addLayer(mapOptions.layers.court);
 }
+
 </script>
