--- a/nba/nba.html
+++ b/nba/nba.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset=utf-8 />
+<head>    
     <title>NBA shot map</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width"/>
     <script src='libs/leaflet/leaflet.js'></script>
     <link href='libs/leaflet/leaflet.css' rel='stylesheet' />
     <script src='libs/d3/d3.js'></script>
@@ -14,9 +15,7 @@
 </head>
 <body>
 
-<div id='map' style="width: 600px; height: 700px"></div>
-<div id='logs'> 
-</div>
+<div id='map' style="width: 100%; height: 100%"></div>
 
 <script type="text/javascript">    
 /*
