--- a/nba/nba_lodash.html
+++ b/nba/nba_lodash.html
@@ -4,7 +4,7 @@
     <title>NBA shot map</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script src="libs/leaflet/leaflet.js"></script>
     <link href="libs/leaflet/leaflet.css" rel="stylesheet" />
     <script src="libs/d3/d3.js"></script>
@@ -23,24 +23,26 @@
   height: 100%;
 }
 </style>
-<div class="row">
-    <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
-        <div id="map"></div>    
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+        <div id="selector">
+            <h3>Display data</h3>		
+            <select id ="shotTypeSelector" class="form-control">
+            <optgroup label="Shot Type">
+                <option selected="selected">ALL</option>
+            </optgroup>		  
+            </select>
+        </div>	    
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+            <div id="map"></div>    
+        </div>	
     </div>
-    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-    <div id="selector">
-		<h3>Display data</h3>		
-		<select id ="shotTypeSelector" class="form-control">
-		  <optgroup label="Shot Type">
-		    <option selected="selected">ALL</option>
-		  </optgroup>		  
-		</select>
-	</div>	    
-    </div>	
+
 </div>
 
 <script type="text/javascript">
-
 
 var map = L.map("map", {
     crs: L.CRS.Simple,
@@ -48,18 +50,10 @@ var map = L.map("map", {
     zoom: 0
 });
 
-
 mapOptions.map = map;
 
-/*
-var layer = L.featureGroup();
-mapOptions.layers.shots = layer;
-map.addLayer(mapOptions.layers.shots);
-*/
-
 jQuery( document ).ready(function() {
-	buildSelectOption(curry, "ALL" ,"shotTypeSelector" );    
-    //manageNBAresponse(curry);
+	buildSelectOption(curry, "ALL" ,"shotTypeSelector" );        
     drawCourt();
 });
 
