--- a/nba/nba_d3.html
+++ b/nba/nba_d3.html
@@ -23,18 +23,29 @@
   height: 100%;
 }
 svg.d3 {
-	width: 100%;
-	height: 100%;
+ width: 100%;
+ height: 400px;
 }
+
 path.slice{
-	stroke-width:2px;
+ stroke-width:2px;
 }
 
 polyline{
-	opacity: .3;
-	stroke: black;
-	stroke-width: 2px;
-	fill: none;
+ opacity: .3;
+ stroke: black;
+ stroke-width: 2px;
+ fill: none;
+}
+text{
+ fill: #666
+}
+
+.percent{  
+ font-size: 2.5em;
+}
+.totals{  
+  font-style: italic;
 }
 
 </style>
