--- a/webmapping/index.html
+++ b/webmapping/index.html
@@ -16,6 +16,8 @@
             <script src="libs/leaflet-plugins/Leaflet.Coordinates-0.1.5.min.js"></script>    
             <script src="libs/leaflet-plugins/L.Control.Basemaps-min.js"></script>    
             <script src="libs/leaflet-plugins/leaflet.defaultextent.js"></script>    
+            <script src="foursquare.js"></script>   
+            <script src="libs/leaflet-plugins/leaflet-layerjson.js"></script>    
             
             <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
             <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
@@ -75,6 +77,46 @@
                     if(name === "home" && active){
                         this._fnInitializeHomeButton();
                     }
+                    if(name ==="foursquare" && active){
+                        this._fnInitialize4Square();
+                    }
+                },
+                "_fnInitialize4Square": function(){                    
+                    var url = FOURSQUARE.url + 'venues/explore?client_id='+FOURSQUARE.clientID + '&client_secret=' + FOURSQUARE.secret + '&v=20180323&limit=100&ll=39.482039,-0.347631&query='                    
+                    var jsonLayer = new L.LayerJSON(
+                        {
+                            url:url, 
+                            propertyId: "referralId",
+                            buildIcon: function(data, e){
+                                var foursquareIco = L.icon({
+                                    iconUrl: 'foursquare.png',
+                                    iconSize:     [25, 25], // size of the icon                                    
+                                    iconAnchor:   [5, 25], // point of the icon which will correspond to marker's location                                    
+                                    popupAnchor:  [5, -25] // point from which the popup should open relative to the iconAnchor
+                                });
+                                return foursquareIco;
+                            },
+                            dataToMarker: function(data,e){                                
+                                var title = data.venue.name,
+                                markerOpts = L.Util.extend({icon: this._buildIcon(data,title), title: title }, data),
+                                marker = new L.Marker(L.latLng(data.venue.location.lat,data.venue.location.lng), markerOpts ),
+                                htmlPopup = null;
+                    
+                                return marker;
+                            },                           
+                            onEachMarker: function(data,layer){                                
+                                layer.bindPopup(layer.options.title);
+                            }
+                    });
+
+                    jsonLayer.on('dataloaded', function(e) {	//show loaded data!                        
+                        var json = e.data.response.groups[0].items;
+                        for (var k in json) {
+                            if (!isNaN(parseFloat(k)) && isFinite(k))
+                                this.addMarker.call(this, json[k]);
+                        }
+                    });
+                    this.data.map.addLayer(jsonLayer);
                 },
                 "_fnInitializeHomeButton": function (){
                     L.control.defaultExtent({
@@ -85,14 +127,16 @@
                         }).addTo(slides.data.map);
                 },
                 "_fnInitializeControlCoordinates": function(a, b, c, d){
-                        L.control.coordinates({
+                        var coordControl = L.control.coordinates({
                             position:a,
                             decimals:6,
                             useDMS:d,
                             decimalSeperator:",",
                             labelTemplateLat: b,
                             labelTemplateLng:c
-                        }).addTo(slides.data.map);
+                        });
+
+                        coordControl.addTo(slides.data.map);                        
                 },
                 "_fnInitializeGeocoder":function(){
                     var options={
